--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -7,7 +7,7 @@
     tools:context=".LoginPageActivity">
 
     <EditText
-        android:id="@+id/edtUsername"
+        android:id="@+id/edtRegistarUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
@@ -26,9 +26,9 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/edtUsername"
-        app:layout_constraintStart_toStartOf="@+id/edtUsername"
-        app:layout_constraintTop_toBottomOf="@+id/edtUsername" />
+        app:layout_constraintEnd_toEndOf="@+id/edtRegistarUsername"
+        app:layout_constraintStart_toStartOf="@+id/edtRegistarUsername"
+        app:layout_constraintTop_toBottomOf="@+id/edtRegistarUsername" />
 
     <Button
         android:id="@+id/edtLoginButton"
@@ -39,4 +39,14 @@
         app:layout_constraintEnd_toEndOf="@+id/edtPassword"
         app:layout_constraintStart_toStartOf="@+id/edtPassword"
         app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
+
+    <Button
+        android:id="@+id/btnLoginRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Register"
+        app:layout_constraintEnd_toEndOf="@+id/edtLoginButton"
+        app:layout_constraintStart_toStartOf="@+id/edtLoginButton"
+        app:layout_constraintTop_toBottomOf="@+id/edtLoginButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
