--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     <LinearLayout
         android:id="@+id/idLLedt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="72dp"
         android:orientation="horizontal"
         android:weightSum="5">
 
@@ -33,8 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/whichCity"
-                android:singleLine="true"
-               />
+                android:singleLine="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -52,19 +51,73 @@
 
     </LinearLayout>
 
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/idWinnerPick"
+        app:cardCornerRadius="7dp"
+        app:cardElevation="7dp"
+        android:layout_margin="5dp"
+        android:layout_below="@+id/idLLedt"
+        app:cardBackgroundColor="@color/lightblue_1">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/imgWinnerRestaurant"
+                android:layout_width="240dp"
+                android:layout_height="240dp"
+                android:src="@mipmap/ic_launcher"
+                android:layout_margin="5dp"/>
+
+            <TextView
+                android:id="@+id/txtWinnerRestaurantName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_toEndOf="@+id/imgWinnerRestaurant"
+                android:text="Restaurant Name"
+                android:layout_margin="10dp"/>
+
+            <ImageView
+                android:id="@+id/idIVWinnerYelpStars"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/stars_small_5"
+                android:layout_toEndOf="@+id/imgWinnerRestaurant"
+                android:layout_below="@id/txtWinnerRestaurantName"
+                android:layout_marginStart="10dp" />
+
+            <TextView
+                android:id="@+id/idTVWinnerCruisineType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/imgWinnerRestaurant"
+                android:layout_below="@+id/idIVWinnerYelpStars"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:text="$$$$$ - Cruisine"/>
+
+        </RelativeLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRvRestaurant"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/idLLMenu"
-        android:layout_below="@+id/idLLedt"
+        android:layout_below="@+id/idWinnerPick"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/idLLMenu"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="64dp"
         android:layout_alignParentBottom="true"
         android:background="@drawable/customborder">
 
