--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,26 +12,34 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop" />
 
+    <ImageView
+        android:id="@+id/topPic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/top_picture" />
     <LinearLayout
         android:id="@+id/idLLedt"
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:orientation="horizontal"
-        android:weightSum="5">
+        android:weightSum="5"
+        android:layout_below="@id/topPic">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/idTICity"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_height="60dp"
+            android:layout_margin="1dp"
             android:layout_weight="4.5"
-            android:padding="5dp">
+            android:padding="1dp"
+            app:boxStrokeColor="@color/black"
+            app:hintTextColor="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/idEdtCity"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:hint="@string/whichCity"
                 android:singleLine="true" />
 
@@ -58,19 +66,29 @@
         app:cardCornerRadius="7dp"
         app:cardElevation="7dp"
         android:layout_margin="5dp"
-        android:layout_below="@+id/idLLedt"
-        app:cardBackgroundColor="@color/lightblue_1">
+        android:layout_below="@+id/idLLedt">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
+            <TextView
+                android:id="@+id/winnerText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Winning Pick!"
+                android:layout_centerHorizontal="true"
+                android:textSize="24sp"
+                android:textStyle="bold"/>
             <ImageView
                 android:id="@+id/imgWinnerRestaurant"
                 android:layout_width="240dp"
                 android:layout_height="240dp"
-                android:src="@mipmap/ic_launcher"
-                android:layout_margin="5dp"/>
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_below="@id/winnerText"
+                android:src="@mipmap/ic_launcher" />
 
             <TextView
                 android:id="@+id/txtWinnerRestaurantName"
@@ -79,6 +97,7 @@
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:layout_toEndOf="@+id/imgWinnerRestaurant"
+                android:layout_below="@+id/winnerText"
                 android:text="Restaurant Name"
                 android:layout_margin="10dp"/>
 
@@ -117,16 +136,16 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/idLLMenu"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:background="@drawable/customborder">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/idIVHome"
@@ -134,59 +153,47 @@
                 android:layout_height="40dp"
                 android:src="@drawable/ic_home"
                 app:tint="@color/black" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Home"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/idIVFavorites"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_favorites"
-                app:tint="@color/black"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Favorites"/>
+                app:tint="@color/black" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/idIVHistory"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_history"
-                app:tint="@color/black"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="History"/>
+                app:tint="@color/black" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/idIVAccountBox"
@@ -194,10 +201,6 @@
                 android:layout_height="40dp"
                 android:src="@drawable/ic_accountbox"
                 app:tint="@color/black" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Account"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
